--- a/База_рекламаций/reclamationhub/templates/base_statistic_cards.html
+++ b/База_рекламаций/reclamationhub/templates/base_statistic_cards.html
@@ -1,5 +1,7 @@
-<!-- Карточки с общей статистикой -->
-<!-- Создали отдельный файл, т.к. карточки используются в других шаблонах: home.html и reports\references.html через include -->
+<!-- templates/base_statistic_cards.html
+ Карточки с общей статистикой
+ Создали отдельный файл, т.к. карточки используются через include в шаблонах home.html и reports\references.html
+-->
 
 <div class="row mb-4">
     <div class="col-md-3">
