--- a/База_рекламаций/reclamationhub/templates/home.html
+++ b/База_рекламаций/reclamationhub/templates/home.html
@@ -28,9 +28,8 @@
 </div>
 
 <!-- Карточки с общей статистикой -->
-<!-- Используем include для карточек -->
 <div id="statsContainer">
-    {% include 'includes/stats_cards.html' %}
+    {% include 'base_statistic_cards.html' %}  <!-- Используем include для включения карточек в шаблон -->
 </div>
 
 <!-- Графики по изделиям и по месяцам -->
