--- a/База_рекламаций/reclamationhub/reports/templates/reports/references.html
+++ b/База_рекламаций/reclamationhub/reports/templates/reports/references.html
@@ -15,7 +15,7 @@
     </div>
 
     <!-- Карточки статистики как на главной странице -->
-    {% include 'includes/stats_cards.html' %}
+    {% include 'base_statistic_cards.html' %}
 
     <!-- Карточки с приложениями для аналитики -->
     <!-- На больших экранах - 3 в ряд, на средних - 2 в ряд, на малых - 1 в ряд -->
