Изменен вывод отчетного периода в culprits_defect

--- a/База_рекламаций/reclamationhub/reports/templates/reports/culprits_defect.html
+++ b/База_рекламаций/reclamationhub/reports/templates/reports/culprits_defect.html
@@ -30,7 +30,7 @@
                     <h5>🔍 Параметры анализа</h5>
                 </div>
                 <div class="card-body">
-                    <p>Справка по виновникам дефектов за отчетный месяц</p>
+                    <p><strong>Отчетный месяц:</strong> {{ report_month }} {{ report_year }} года</p>
 
                     <form method="post">
                         {% csrf_token %}
