Изменения в шаблонах модулей анализа претензий

--- a/База_рекламаций/reclamationhub/claims/templates/claims/claim_main.html
+++ b/База_рекламаций/reclamationhub/claims/templates/claims/claim_main.html
@@ -48,8 +48,8 @@
                     <p><strong>Год анализа:</strong></p>
                     <p>Анализ будет проводиться по выбранному году</p>
                     <hr>
-                    <p><strong>Курс Нацбанка РБ:</strong></p>
-                    <p>Суммы претензий во всех приложениях будут конвертированы в BYN по этому курсу.</p>
+                    <p><strong>Курс конвертации RUR → BYN:</strong></p>
+                    <p>Суммы претензий во всех приложениях будут конвертированы в BYN.</p>
                 </div>
 
                 <!-- Информационная панель -->
