--- a/База_рекламаций/reclamationhub/templates/base_navigation.html
+++ b/База_рекламаций/reclamationhub/templates/base_navigation.html
@@ -64,7 +64,8 @@
 
                         <!-- Аналитика претензий -->
                         <li><h6 class="dropdown-header">Претензии:</h6></li>
-                        <li><a class="dropdown-item" href="{% url 'claims:claim_main' %}">Dashboard претензий</a></li>
+                        <li><a class="dropdown-item" href="{% url 'claims:dashboard' %}">Общая сводка</a></li>
+                        <li><a class="dropdown-item" href="{% url 'claims:claim_main' %}">Анализ претензий</a></li>
                     </ul>
                 </li>
             </ul>
